--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=TodoApp
 # H2 Database Configuration
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:file:./data/todoapp
+#spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
@@ -8,3 +9,6 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # Enable H2 Console (Optional)
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+# Hibernate settings (optional)
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
