add registration endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.h2.console.path=/h2-console
 # Hibernate settings (optional)
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+# jwttoken
+jwt.public.key=1234567890
+jwt.private.key=1234567890
